creating data view folder

--- a/Process_Modeling_py3.ipynb
+++ b/Process_Modeling_py3.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathlib.Path('Overview/').mkdir(parents = True, exist_ok = True) #The observations are plotted in a folder called Overview\n",
+    "pathlib.Path('View_Data/').mkdir(parents = True, exist_ok = True) #The observations are plotted in a folder called Overview\n",
     "for i in range(0, positions):\n",
     "    fig = plt.figure(figsize = (10,30))\n",
     "    fig.suptitle('Position %s'%(i + 1), fontsize = 20, fontweight = 'bold')\n",
@@ -120,7 +120,7 @@
     "            plt.plot(df_ist_soll[i][j]) \n",
     "        except:\n",
     "            pass\n",
-    "    plt.savefig('Overview/Position %s.png'%(i + 1))"
+    "    plt.savefig('View_Data/Position %s.png'%(i + 1))"
    ]
   },
   {
@@ -230,6 +230,7 @@
     "\n",
     "    for i in range(0, len(df_fit_array)):\n",
     "        oma_best.append(list(df_array[i][df_array[i].mse == df_array[i].mse.min()].values[0]))\n",
+    "        #A suitable smoothed data is chosen based on the lower mse value\n",
     "        order_best.append(oma_best[i][0])\n",
     "        mse_best.append(oma_best[i][1])\n",
     "        aic_best.append(oma_best[i][2])    \n",
