Update and rename Overview_py2.ipynb to View_data_py2.ipynb

--- a/View_data_py2.ipynb
+++ b/View_data_py2.ipynb
@@ -85,7 +85,7 @@
     "# The first try except code avoids the errors arising due to the already existing Overview directory. \n",
     "# The second try except code avoids the errors resulting from the plotting of the empty data file \n",
     "try:\n",
-    "    os.makedirs('Overview/')\n",
+    "    os.makedirs('View_Data/')\n",
     "except OSError, e:\n",
     "    if e.errno != os.errno.EEXIST:\n",
     "        raise   \n",
@@ -102,7 +102,7 @@
     "            plt.plot(df_ist_soll[i][j]) \n",
     "        except:\n",
     "            pass\n",
-    "    plt.savefig('Overview/Position %s.png'%(i + 1))"
+    "    plt.savefig('View_Data/Position %s.png'%(i + 1))"
    ]
   }
  ],
