--- a/Process_Modeling_py3.ipynb
+++ b/Process_Modeling_py3.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import identification as ob\n",
+    "import identification_py3 as ob\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
