library and path change

--- a/View_data_py3.ipynb
+++ b/View_data_py3.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import identification as ob\n",
+    "import identification_py3 as ob\n",
     "import matplotlib.pyplot as plt\n",
     "import glob #for returning files having the specified path extension\n",
     "import os #checking for empty file\n",
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathlib.Path('Overview/').mkdir(parents = True, exist_ok = True) #The observations are plotted in a folder called Overview\n",
+    "pathlib.Path('View_Data/').mkdir(parents = True, exist_ok = True) #The observations are plotted in a folder called Overview\n",
     "for i in range(0, positions):\n",
     "    fig = plt.figure(figsize = (10,30))\n",
     "    fig.suptitle('Position %s'%(i + 1), fontsize = 20, fontweight = 'bold')\n",
@@ -95,7 +95,7 @@
     "            plt.plot(df_ist_soll[i][j]) \n",
     "        except:\n",
     "            pass\n",
-    "    plt.savefig('Overview/Position %s.png'%(i + 1))"
+    "    plt.savefig('View_Data/Position %s.png'%(i + 1))"
    ]
   }
  ],
