--- a/Process_Modeling_py2.ipynb
+++ b/Process_Modeling_py2.ipynb
@@ -346,7 +346,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "quant_matrix_pt1 = []\n",
@@ -396,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d_pt1    = {'Position': range(1, positions+1), 'Mean': mean_matrix_pt1, 'Median': median_matrix_pt1, 'Std_Dev': std_matrix_pt1,\\\n",
@@ -439,15 +439,15 @@
     "    text_file.write('###########################\\n')\n",
     "    text_file.write('  STATISTICAL INFORMATION  \\n')\n",
     "    text_file.write('###########################\\n')\n",
-    "    for i in range(0,positions):\n",
+    "    for i in range(0, positions):\n",
     "        text_file.write('\\nPosition %s\\n'%(i+1))\n",
     "        text_file.write('Obs       Mean        Median       Standard Deviation    Variance \\\n",
     "        Quantile[.25, .5, .75]\\n')\n",
     "\n",
-    "        for j in range(0,observations):\n",
+    "        for j in range(0, observations):\n",
     "            try:\n",
     "                text_file.write('%s   %s  %s  %s    %s  %s\\n'\\\n",
-    "                                %((j+1), stats.mean_pt1(yout_full[i][j]), \\\n",
+    "                                %((j+1), stats.mean(yout_full_pt1[i][j]), \\\n",
     "                                  stats.median(yout_full_pt1[i][j]), \\\n",
     "                                  stats.pstdev(yout_full_pt1[i][j]),\\\n",
     "                                  stats.variance(yout_full_pt1[i][j]),pd.Series(yout_full_pt1[i][j]).quantile([.25, .5, .75]).values))             \n",
@@ -458,15 +458,15 @@
     "    text_file.write('###########################\\n')\n",
     "    text_file.write('  STATISTICAL INFORMATION  \\n')\n",
     "    text_file.write('###########################\\n')\n",
-    "    for i in range(0,positions):\n",
+    "    for i in range(0, positions):\n",
     "        text_file.write('\\nPosition %s\\n'%(i+1))\n",
     "        text_file.write('Obs       Mean        Median       Standard Deviation    Variance \\\n",
     "        Quantile[.25, .5, .75]\\n')\n",
     "\n",
-    "        for j in range(0,observations):\n",
+    "        for j in range(0, observations):\n",
     "            try:\n",
     "                text_file.write('%s   %s  %s  %s    %s  %s\\n'\\\n",
-    "                                %((j+1), stats.mean_pt2(yout_full[i][j]), \\\n",
+    "                                %((j+1), stats.mean(yout_full_pt2[i][j]), \\\n",
     "                                  stats.median(yout_full_pt2[i][j]), \\\n",
     "                                  stats.pstdev(yout_full_pt2[i][j]),\\\n",
     "                                  stats.variance(yout_full_pt2[i][j]),pd.Series(yout_full_pt2[i][j]).quantile([.25, .5, .75]).values))             \n",
