--- a/Process_Modeling_py2.ipynb
+++ b/Process_Modeling_py2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import identification_py2 as ob\n",
+    "import identification_py2 as ident_tools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "task_first        = sorted(glob.glob('step_log_new/*/*task*.log')) #corresponds to .log files that has data related to the first position\n",
@@ -69,9 +67,15 @@
     "    df_ist_soll.append([])\n",
     "    for j in range(0, observations):\n",
     "        try:\n",
-    "            df_ist_soll[i].append(ob.batch_read_data(control_full[i][j], task_full[i][j]))\n",
+    "            df_ist_soll[i].append(ident_tools.batch_read_data(control_full[i][j], task_full[i][j]))\n",
     "        except:\n",
-    "            continue"
+    "            continue\n",
+    "            \n",
+    "print \"############################### INFO #########################################\"\n",
+    "print \"df_ist_soll contains all reference and actual data per each position and each experiement\"\n",
+    "print\n",
+    "print \"df_ist_soll[position][experiement] -> pandas.Dataframe{'x_ist', 'x_soll'}\"\n",
+    "print \"############################### INFO #########################################\"\n"
    ]
   },
   {
@@ -84,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#for i in range(0, observations):\n",
@@ -140,19 +142,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def smoothing_sg():\n",
-    "    smooth_1 = [] #array having values, whoose smoothing is done according to first order \n",
-    "    smooth_2 = [] #array having values, whoose smoothing is done according to second order\n",
+    "def smoothing_sg(yout_array, order):\n",
+    "    smoothed = [] #array having values, whoose smoothing is done according to order \n",
     "    \n",
-    "    for i in range(0, len(yout_array)):\n",
-    "        smooth_1.append(ob.smooth(yout_array[i], 1))\n",
-    "        smooth_2.append(ob.smooth(yout_array[i], 2))\n",
-    "    return smooth_1, smooth_2"
+    "    for yout in yout_array:\n",
+    "        smoothed.append(ident_tools.smooth(yout, order))\n",
+    "\n",
+    "    return smoothed"
    ]
   },
   {
@@ -165,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The steady state value is calculated based on the final values of the step response. \n",
@@ -176,7 +173,7 @@
     "#youto,to are the yout and t outputs from the pt1 and pt2 system\n",
     "#tf and delay are the transfer functions of the output and its delay\n",
     "#tdytdts is an array that contains all the above values in a sequential order\n",
-    "def pt1():\n",
+    "def pt1(yout_array, t_array):\n",
     "    to_1           = []\n",
     "    tf_1           = []\n",
     "    youto_1        = []\n",
@@ -185,10 +182,11 @@
     "    delay_tf_1     = []\n",
     "    steady_state_1 = []\n",
     "    time_constant_1 = []\n",
-    "    smooth_1 = smoothing_sg()[0]\n",
+    "    smooth_1 = smoothing_sg(yout_array, 1)\n",
     "    \n",
-    "    for i in range(0,len(smooth_1)):\n",
-    "        tdytdts_1.append(ob.pt1(smooth_1[i], t_array[i]))\n",
+    "    \n",
+    "    for i in range(0, len(smooth_1)):\n",
+    "        tdytdts_1.append(ident_tools.pt1(smooth_1[i], t_array[i]))\n",
     "        tf_1.append(tdytdts_1[i][0])\n",
     "        youto_1.append(tdytdts_1[i][1])\n",
     "        to_1.append(tdytdts_1[i][2])\n",
@@ -196,49 +194,6 @@
     "        time_constant_1.append(tdytdts_1[i][4])\n",
     "        steady_state_1.append(tdytdts_1[i][5])\n",
     "    return steady_state_1, time_constant_1, delay_1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### PT2 Estimation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "'''PT2 modeling'''\n",
-    "def pt2():\n",
-    "    to_2            = []\n",
-    "    tf_2            = []\n",
-    "    zeta            = []\n",
-    "    youto_2         = []\n",
-    "    delay_2         = []\n",
-    "    tdytdts_2       = []\n",
-    "    delay_tf_2      = []\n",
-    "    steady_state_2  = []\n",
-    "    time_constant_2 = []\n",
-    "    smooth_2 = smoothing_sg()[1]\n",
-    "    \n",
-    "    try:\n",
-    "        for i in range(0,len(smooth_2)):\n",
-    "            tdytdts_2.append(ob.pt2(smooth_2[i], t_array[i]))\n",
-    "            tf_2.append(tdytdts_2[i][0])\n",
-    "            youto_2.append(tdytdts_2[i][1])\n",
-    "            to_2.append(tdytdts_2[i][2])\n",
-    "            delay_2.append(tdytdts_2[i][3])\n",
-    "            time_constant_2.append(tdytdts_2[i][4])\n",
-    "            steady_state_2.append(tdytdts_2[i][5])\n",
-    "            zeta.append(tdytdts_2[i][6])\n",
-    "    except:\n",
-    "        pass\n",
-    "    return steady_state_2, time_constant_2, delay_2, zeta"
    ]
   },
   {
@@ -270,12 +225,13 @@
     "\n",
     "for i in range(0, positions):\n",
     "    try:\n",
-    "#        xin_array, yout_array, t_array = ob.strip_multiply(df_ist_soll[i])\n",
-    "        xin_array, yout_array, t_array, m_factor = ob.unit_response(df_ist_soll[i])\n",
-    "        steady_state_1, time_constant_1, delay_1 = pt1()\n",
-    "        ideal_tf_pt1, ideal_model_output_pt1, ideal_model_time_pt1 = ob.ideal_pt1(steady_state_1, time_constant_1, delay_1)\n",
-    "    except:\n",
-    "        continue\n",
+    "#        xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
+    "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
+    "        steady_state_1, time_constant_1, delay_1 = pt1(yout_array, t_array)\n",
+    "        ideal_tf_pt1, ideal_model_output_pt1, ideal_model_time_pt1 = ident_tools.ideal_pt1(steady_state_1, time_constant_1, delay_1)\n",
+    "    except Exception, e:\n",
+    "        print \"Exception: {}\".format(str(e))\n",
+    "    \n",
     "    yout_full_pt1.append(yout_array)\n",
     "    model_pos_pt1.append(ideal_model_output_pt1)\n",
     "    mean_matrix_pt1.append(stats.mean(ideal_model_output_pt1))\n",
@@ -287,7 +243,48 @@
     "    plt.savefig('model_pt1.png')\n",
     "    model_time_pt1.append(ideal_model_time_pt1)\n",
     "    model_output_pt1.append(ideal_model_output_pt1)    \n",
-    "    system_matrix_pt1.append(ob.ss(ideal_tf_pt1))"
+    "    system_matrix_pt1.append(ident_tools.ss(ideal_tf_pt1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### PT2 Estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''PT2 modeling'''\n",
+    "def pt2(yout_array, t_array):\n",
+    "    to_2            = []\n",
+    "    tf_2            = []\n",
+    "    zeta            = []\n",
+    "    youto_2         = []\n",
+    "    delay_2         = []\n",
+    "    tdytdts_2       = []\n",
+    "    delay_tf_2      = []\n",
+    "    steady_state_2  = []\n",
+    "    time_constant_2 = []\n",
+    "    smooth_2 = smoothing_sg(yout_array, 2)\n",
+    "    \n",
+    "    try:\n",
+    "        for i in range(0,len(smooth_2)):\n",
+    "            tdytdts_2.append(ident_tools.pt2(smooth_2[i], t_array[i]))\n",
+    "            tf_2.append(tdytdts_2[i][0])\n",
+    "            youto_2.append(tdytdts_2[i][1])\n",
+    "            to_2.append(tdytdts_2[i][2])\n",
+    "            delay_2.append(tdytdts_2[i][3])\n",
+    "            time_constant_2.append(tdytdts_2[i][4])\n",
+    "            steady_state_2.append(tdytdts_2[i][5])\n",
+    "            zeta.append(tdytdts_2[i][6])\n",
+    "    except:\n",
+    "        pass\n",
+    "    return steady_state_2, time_constant_2, delay_2, zeta"
    ]
   },
   {
@@ -315,10 +312,10 @@
     "m_factor_array   = [] # used in model validation while plotting\n",
     "for i in range(0, positions):\n",
     "    try:\n",
-    "        #xin_array, yout_array, t_array = ob.strip_multiply(df_ist_soll[i])\n",
-    "        xin_array, yout_array, t_array, m_factor = ob.unit_response(df_ist_soll[i])\n",
-    "        steady_state_2, time_constant_2, delay_2, zeta = pt2()\n",
-    "        ideal_tf_pt2, ideal_model_output_pt2, ideal_model_time_pt2 = ob.ideal_pt2(steady_state_2, time_constant_2, delay_2, zeta)\n",
+    "        #xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
+    "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
+    "        steady_state_2, time_constant_2, delay_2, zeta = pt2(yout_array, t_array)\n",
+    "        ideal_tf_pt2, ideal_model_output_pt2, ideal_model_time_pt2 = ident_tools.ideal_pt2(steady_state_2, time_constant_2, delay_2, zeta)\n",
     "    except:\n",
     "        continue\n",
     "    yout_full_pt2.append(yout_array)\n",
@@ -333,7 +330,7 @@
     "    model_time_pt2.append(ideal_model_time_pt2)\n",
     "    model_output_pt2.append(ideal_model_output_pt2)\n",
     "    m_factor_array.append(mean(m_factor))\n",
-    "    system_matrix_pt2.append(ob.ss(ideal_tf_pt2))"
+    "    system_matrix_pt2.append(ident_tools.ss(ideal_tf_pt2))"
    ]
   },
   {
@@ -346,9 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "quant_matrix_pt1 = []\n",
@@ -430,9 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"All_Model_Statistical_Output_pt1.txt\", \"w\") as text_file:\n",
@@ -484,9 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pos_matrix_pt1 = []\n",
@@ -558,9 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"State_Space_Parameters_pt1.txt\", \"w\") as text_file:\n",
@@ -618,6 +607,13 @@
     "            pass\n",
     "    plt.savefig('Model_Validation/Position %s model.png'%(i+1))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -636,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
