--- a/Process_Modeling_py2.ipynb
+++ b/Process_Modeling_py2.ipynb
@@ -104,10 +104,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# The first try except code avoids the errors arising due to the already existing Overview directory. \n",
     "# The second try except code avoids the errors resulting from the plotting of the empty data file \n",
@@ -138,6 +136,63 @@
    "source": [
     "###### Smoothing using Savgol filter"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, df_pos in enumerate(df_ist_soll):\n",
+    "    for j, df_exp in enumerate(df_pos):\n",
+    "        #print (pd.DataFrame(range(0, len(df_exp)), columns=['col1'], index=df_exp.index)).head()\n",
+    "        #print df_exp.head()\n",
+    "        #print (pd.DataFrame(range(0, len(df_exp)), columns=['col1'], index=df_exp.index)).tail()\n",
+    "        #print df_exp.tail()\n",
+    "        \n",
+    "        # The following expects the unit step to be single and alone per experiement!\n",
+    "        if len(df_exp.x_soll.value_counts()) > 2:\n",
+    "            print \"WARNING! - Data in Position {0}, Experiement {1} (df_ist_soll[{0}][{1}])\".format(i, j)\n",
+    "            print \"has more than {} different values\". format(len(df_exp.x_soll.value_counts()))\n",
+    "            print \"!!!! This could lead to wrong calculations!!!!\"\n",
+    "            print \"!!!! Target values should be either Zero (beginning) or step height (until end)!!!!\"\n",
+    "            print df_exp.x_soll.value_counts()\n",
+    "\n",
+    "        factor = 1.0/max(df_exp.x_soll)\n",
+    "        df_ist_soll[i][j] = pd.concat(\n",
+    "            [df_ist_soll[i][j],\n",
+    "            pd.DataFrame(\n",
+    "                factor*np.array(df_exp.x_ist),\n",
+    "                columns=['normalized'],\n",
+    "                index=df_exp.index)],\n",
+    "            axis=1)\n",
+    "        \n",
+    "        for order in range(1, 4):\n",
+    "            df_ist_soll[i][j] = pd.concat(\n",
+    "                [df_ist_soll[i][j],\n",
+    "                pd.DataFrame(\n",
+    "                    ident_tools.smooth(factor*np.array(df_exp.x_ist), order),\n",
+    "                    columns=['smooth_{}'.format(order)],\n",
+    "                    index=df_exp.index)],\n",
+    "                axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ist_soll[0][0].plot()\n",
+    "print df_ist_soll[0][0].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -183,7 +238,7 @@
     "    steady_state_1 = []\n",
     "    time_constant_1 = []\n",
     "    smooth_1 = smoothing_sg(yout_array, 1)\n",
-    "    \n",
+    "    #plot(smooth_1[0])\n",
     "    \n",
     "    for i in range(0, len(smooth_1)):\n",
     "        tdytdts_1.append(ident_tools.pt1(smooth_1[i], t_array[i]))\n",
@@ -228,7 +283,7 @@
     "#        xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
     "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
     "        steady_state_1, time_constant_1, delay_1 = pt1(yout_array, t_array)\n",
-    "        ideal_tf_pt1, ideal_model_output_pt1, ideal_model_time_pt1 = ident_tools.ideal_pt1(steady_state_1, time_constant_1, delay_1)\n",
+    "        ideal_tf_pt1, ideal_model_output_pt1, ideal_model_time_pt1, tf_without_delay_pt1, avg_delay_pt1 = ident_tools.ideal_pt1(steady_state_1, time_constant_1, delay_1)\n",
     "    except Exception, e:\n",
     "        print \"Exception: {}\".format(str(e))\n",
     "    \n",
@@ -315,7 +370,7 @@
     "        #xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
     "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
     "        steady_state_2, time_constant_2, delay_2, zeta = pt2(yout_array, t_array)\n",
-    "        ideal_tf_pt2, ideal_model_output_pt2, ideal_model_time_pt2 = ident_tools.ideal_pt2(steady_state_2, time_constant_2, delay_2, zeta)\n",
+    "        ideal_tf_pt2, ideal_model_output_pt2, ideal_model_time_pt2, tf_without_delay_pt2, avg_delay_pt2 = ident_tools.ideal_pt2(steady_state_2, time_constant_2, delay_2, zeta)\n",
     "    except:\n",
     "        continue\n",
     "    yout_full_pt2.append(yout_array)\n",
