--- a/Process_Modeling_py2.ipynb
+++ b/Process_Modeling_py2.ipynb
@@ -63,18 +63,25 @@
     "            \n",
     "# Reading all the data into a dataframe array\n",
     "df_ist_soll = []\n",
+    "model_estimations = []\n",
+    "\n",
     "for i in range(0, positions):\n",
     "    df_ist_soll.append([])\n",
+    "    model_estimations.append([])\n",
     "    for j in range(0, observations):\n",
     "        try:\n",
+    "            # initialize result dictionary\n",
+    "            model_estimations[i].append({})\n",
     "            df_ist_soll[i].append(ident_tools.batch_read_data(control_full[i][j], task_full[i][j]))\n",
     "        except:\n",
+    "            print \"Some Error occured and was ignored\"\n",
     "            continue\n",
     "            \n",
     "print \"############################### INFO #########################################\"\n",
     "print \"df_ist_soll contains all reference and actual data per each position and each experiement\"\n",
     "print\n",
     "print \"df_ist_soll[position][experiement] -> pandas.Dataframe{'x_ist', 'x_soll'}\"\n",
+    "print \"model_estimations[position][experiement] -> dict{'delay', 'scale_factor', ...}\"\n",
     "print \"############################### INFO #########################################\"\n"
    ]
   },
@@ -159,6 +166,8 @@
     "            print df_exp.x_soll.value_counts()\n",
     "\n",
     "        factor = 1.0/max(df_exp.x_soll)\n",
+    "        model_estimations[i][j]['step_height'] = max(df_exp.x_soll)\n",
+    "        model_estimations[i][j]['scale_factor'] = factor\n",
     "        df_ist_soll[i][j] = pd.concat(\n",
     "            [df_ist_soll[i][j],\n",
     "            pd.DataFrame(\n",
@@ -184,15 +193,10 @@
    "outputs": [],
    "source": [
     "df_ist_soll[0][0].plot()\n",
-    "print df_ist_soll[0][0].head()"
+    "print df_ist_soll[0][0].head()\n",
+    "\n",
+    "print model_estimations[0][0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -283,10 +287,13 @@
     "#        xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
     "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
     "        steady_state_1, time_constant_1, delay_1 = pt1(yout_array, t_array)\n",
+    "        print steady_state_1\n",
+    "        print time_constant_1\n",
+    "        print delay_1\n",
     "        ideal_tf_pt1, ideal_model_output_pt1, ideal_model_time_pt1, tf_without_delay_pt1, avg_delay_pt1 = ident_tools.ideal_pt1(steady_state_1, time_constant_1, delay_1)\n",
     "    except Exception, e:\n",
     "        print \"Exception: {}\".format(str(e))\n",
-    "    \n",
+    "    print \"\"\n",
     "    yout_full_pt1.append(yout_array)\n",
     "    model_pos_pt1.append(ideal_model_output_pt1)\n",
     "    mean_matrix_pt1.append(stats.mean(ideal_model_output_pt1))\n",
@@ -299,6 +306,66 @@
     "    model_time_pt1.append(ideal_model_time_pt1)\n",
     "    model_output_pt1.append(ideal_model_output_pt1)    \n",
     "    system_matrix_pt1.append(ident_tools.ss(ideal_tf_pt1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[1.0007842664778608, 1.0003438336566808, 1.0005084235762174, 0.9998285680442587, 0.9984059006998315, 1.0000670665501286, 1.001267609392403, 1.0005519804439478, 0.9995672222546761, 0.9958639755904434]\n",
+    "[0.13597607612600002, 0.14762711525, 0.13303303718599999, 0.138035058975, 0.144219875336, 0.137119054794, 0.140470027924, 0.13997387886, 0.141279935837, 0.14185500145]\n",
+    "[0.043631076812699995, 0.0543639659882, 0.0466630458832, 0.0503430366516, 0.055074930191, 0.0442728996277, 0.0455219745636, 0.044457912445099994, 0.04453492164609999, 0.053292989730799996]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, df_pos in enumerate(df_ist_soll):\n",
+    "    for j, df_exp in enumerate(df_pos):\n",
+    "        \n",
+    "        for order in range(1,4):\n",
+    "            # PT1 Estimations\n",
+    "            tf, _, _, delay, time_constant, steady_state, tf_without_delay =\\\n",
+    "                ident_tools.pt1(np.array(df_exp['smooth_{}'.format(order)]), np.array(df_exp.index))\n",
+    "            pt1_dict = {\n",
+    "                'tf_delay': tf,\n",
+    "                'tf': tf_without_delay,\n",
+    "                'delay': delay,\n",
+    "                'time_constant': time_constant,\n",
+    "                'steady_state': steady_state\n",
+    "            }\n",
+    "            model_estimations[i][j]['pt1_smooth_{}'.format(order)] = pt1_dict\n",
+    "        \n",
+    "        #for order in range(2,4):\n",
+    "            # PT2 Estimations\n",
+    "        #order = 2\n",
+    "        #tf, _, _, delay, time_constant, steady_state, zeta, tf_without_delay =\\\n",
+    "        #    ident_tools.pt2(np.array(df_exp['smooth_{}'.format(order)]), np.array(df_exp.index))\n",
+    "\n",
+    "        #pt2_dict = {\n",
+    "        #    'tf_delay': tf,\n",
+    "        #    'tf': tf_without_delay,\n",
+    "        #    'delay': delay,\n",
+    "        #    'time_constant': time_constant,\n",
+    "        #    'steady_state': steady_state,\n",
+    "        #    'zeta': zeta,\n",
+    "        #}\n",
+    "        #model_estimations[i][j]['pt2_smooth_{}'.format(order)] = pt2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print model_estimations[0][0].keys()\n",
+    "print model_estimations[0][0]['pt1_smooth_1'].keys()"
    ]
   },
   {
