asserts dict vs pt1-est

--- a/Process_Modeling_py2.ipynb
+++ b/Process_Modeling_py2.ipynb
@@ -256,70 +256,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### Plotting of ideal pt1 model from each point in the task space"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Each of the timeseries in a position is modeled according to the pt1 modeling and the ideal model \n",
-    "# in a position is calculated by taking the average of these individual models.\n",
-    "\n",
-    "\n",
-    "system_matrix_pt1  = [] #contains all the state space parameters of all ideal models\n",
-    "mean_matrix_pt1    = []\n",
-    "median_matrix_pt1  = []\n",
-    "std_matrix_pt1     = [] # std = standard deviation\n",
-    "var_matrix_pt1     = [] # var = variance\n",
-    "model_pos_pt1      = [] # model as time series for each positions\n",
-    "yout_full_pt1      = []\n",
-    "model_time_pt1     = []\n",
-    "model_output_pt1   = []\n",
-    "\n",
-    "for i in range(0, positions):\n",
-    "    try:\n",
-    "#        xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
-    "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
-    "        steady_state_1, time_constant_1, delay_1 = pt1(yout_array, t_array)\n",
-    "        print steady_state_1\n",
-    "        print time_constant_1\n",
-    "        print delay_1\n",
-    "        ideal_tf_pt1, ideal_model_output_pt1, ideal_model_time_pt1, tf_without_delay_pt1, avg_delay_pt1 = ident_tools.ideal_pt1(steady_state_1, time_constant_1, delay_1)\n",
-    "    except Exception, e:\n",
-    "        print \"Exception: {}\".format(str(e))\n",
-    "    print \"\"\n",
-    "    yout_full_pt1.append(yout_array)\n",
-    "    model_pos_pt1.append(ideal_model_output_pt1)\n",
-    "    mean_matrix_pt1.append(stats.mean(ideal_model_output_pt1))\n",
-    "    median_matrix_pt1.append(stats.median(ideal_model_output_pt1))\n",
-    "    std_matrix_pt1.append(stats.pstdev(ideal_model_output_pt1))\n",
-    "    var_matrix_pt1.append(stats.variance(ideal_model_output_pt1))\n",
-    "    plt.plot(ideal_model_time_pt1, ideal_model_output_pt1, label = 'position %s ideal model'%(i+1))\n",
-    "    plt.legend()\n",
-    "    plt.savefig('model_pt1.png')\n",
-    "    model_time_pt1.append(ideal_model_time_pt1)\n",
-    "    model_output_pt1.append(ideal_model_output_pt1)    \n",
-    "    system_matrix_pt1.append(ident_tools.ss(ideal_tf_pt1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[1.0007842664778608, 1.0003438336566808, 1.0005084235762174, 0.9998285680442587, 0.9984059006998315, 1.0000670665501286, 1.001267609392403, 1.0005519804439478, 0.9995672222546761, 0.9958639755904434]\n",
-    "[0.13597607612600002, 0.14762711525, 0.13303303718599999, 0.138035058975, 0.144219875336, 0.137119054794, 0.140470027924, 0.13997387886, 0.141279935837, 0.14185500145]\n",
-    "[0.043631076812699995, 0.0543639659882, 0.0466630458832, 0.0503430366516, 0.055074930191, 0.0442728996277, 0.0455219745636, 0.044457912445099994, 0.04453492164609999, 0.053292989730799996]"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -367,6 +303,70 @@
     "print model_estimations[0][0].keys()\n",
     "print model_estimations[0][0]['pt1_smooth_1'].keys()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Plotting of ideal pt1 model from each point in the task space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Each of the timeseries in a position is modeled according to the pt1 modeling and the ideal model \n",
+    "# in a position is calculated by taking the average of these individual models.\n",
+    "\n",
+    "\n",
+    "system_matrix_pt1  = [] #contains all the state space parameters of all ideal models\n",
+    "mean_matrix_pt1    = []\n",
+    "median_matrix_pt1  = []\n",
+    "std_matrix_pt1     = [] # std = standard deviation\n",
+    "var_matrix_pt1     = [] # var = variance\n",
+    "model_pos_pt1      = [] # model as time series for each positions\n",
+    "yout_full_pt1      = []\n",
+    "model_time_pt1     = []\n",
+    "model_output_pt1   = []\n",
+    "\n",
+    "for i in range(0, positions):\n",
+    "    try:\n",
+    "#        xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
+    "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
+    "        steady_state_1, time_constant_1, delay_1 = pt1(yout_array, t_array)\n",
+    "        \n",
+    "        assert(np.allclose(steady_state_1, \n",
+    "                           [model_estimations[i][it]['pt1_smooth_1']['steady_state'] for it in range(0, observations)]))\n",
+    "        assert(np.allclose(time_constant_1, \n",
+    "                           [model_estimations[i][it]['pt1_smooth_1']['time_constant'] for it in range(0, observations)]))\n",
+    "        assert(np.allclose(delay_1, \n",
+    "                           [model_estimations[i][it]['pt1_smooth_1']['delay'] for it in range(0, observations)]))\n",
+    "\n",
+    "        ideal_tf_pt1, ideal_model_output_pt1, ideal_model_time_pt1, tf_without_delay_pt1, avg_delay_pt1 = ident_tools.ideal_pt1(steady_state_1, time_constant_1, delay_1)\n",
+    "    except Exception, e:\n",
+    "        print \"Exception: {}\".format(str(e))\n",
+    "    yout_full_pt1.append(yout_array)\n",
+    "    model_pos_pt1.append(ideal_model_output_pt1)\n",
+    "    mean_matrix_pt1.append(stats.mean(ideal_model_output_pt1))\n",
+    "    median_matrix_pt1.append(stats.median(ideal_model_output_pt1))\n",
+    "    std_matrix_pt1.append(stats.pstdev(ideal_model_output_pt1))\n",
+    "    var_matrix_pt1.append(stats.variance(ideal_model_output_pt1))\n",
+    "    plt.plot(ideal_model_time_pt1, ideal_model_output_pt1, label = 'position %s ideal model'%(i+1))\n",
+    "    plt.legend()\n",
+    "    plt.savefig('model_pt1.png')\n",
+    "    model_time_pt1.append(ideal_model_time_pt1)\n",
+    "    model_output_pt1.append(ideal_model_output_pt1)    \n",
+    "    system_matrix_pt1.append(ident_tools.ss(ideal_tf_pt1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
