assert dict vs pt2-est

--- a/Process_Modeling_py2.ipynb
+++ b/Process_Modeling_py2.ipynb
@@ -277,21 +277,40 @@
     "            }\n",
     "            model_estimations[i][j]['pt1_smooth_{}'.format(order)] = pt1_dict\n",
     "        \n",
-    "        #for order in range(2,4):\n",
-    "            # PT2 Estimations\n",
-    "        #order = 2\n",
-    "        #tf, _, _, delay, time_constant, steady_state, zeta, tf_without_delay =\\\n",
-    "        #    ident_tools.pt2(np.array(df_exp['smooth_{}'.format(order)]), np.array(df_exp.index))\n",
+    "        for order in range(1,4):\n",
+    "            try:\n",
+    "                tf, _, _, delay, time_constant, steady_state, zeta, tf_without_delay =\\\n",
+    "                    ident_tools.pt2(np.array(df_exp['smooth_{}'.format(order)]), np.array(df_exp.index))\n",
     "\n",
-    "        #pt2_dict = {\n",
-    "        #    'tf_delay': tf,\n",
-    "        #    'tf': tf_without_delay,\n",
-    "        #    'delay': delay,\n",
-    "        #    'time_constant': time_constant,\n",
-    "        #    'steady_state': steady_state,\n",
-    "        #    'zeta': zeta,\n",
-    "        #}\n",
-    "        #model_estimations[i][j]['pt2_smooth_{}'.format(order)] = pt2\n"
+    "                pt2_dict = {\n",
+    "                    'tf_delay': tf,\n",
+    "                    'tf': tf_without_delay,\n",
+    "                    'delay': delay,\n",
+    "                    'time_constant': time_constant,\n",
+    "                    'steady_state': steady_state,\n",
+    "                    'zeta': zeta,\n",
+    "                }\n",
+    "                model_estimations[i][j]['pt2_smooth_{}'.format(order)] = pt2_dict\n",
+    "            except:\n",
+    "                print \"PT2 Estimation failed (smoothed_{2})! Position {0}, Experiement {1}; df_ist_soll[{0}][{1}]\".format(i, j, order)\n",
+    "                #model_estimations[i][j]['pt2_smooth_{}'.format(order)] = None\n",
+    "\n",
+    "        try:\n",
+    "            tf, _, _, delay, time_constant, steady_state, zeta, tf_without_delay =\\\n",
+    "                ident_tools.pt2(np.array(df_exp['normalized']), np.array(df_exp.index))\n",
+    "\n",
+    "            pt2_dict = {\n",
+    "                'tf_delay': tf,\n",
+    "                'tf': tf_without_delay,\n",
+    "                'delay': delay,\n",
+    "                'time_constant': time_constant,\n",
+    "                'steady_state': steady_state,\n",
+    "                'zeta': zeta,\n",
+    "            }\n",
+    "            model_estimations[i][j]['pt2'] = pt2_dict\n",
+    "        except:\n",
+    "            print \"PT2 Estimation failed (normalized)! Position {0}, Experiement {1}; df_ist_soll[{0}][{1}]\".format(i, j)\n",
+    "            #model_estimations[i][j]['pt2'] = None"
    ]
   },
   {
@@ -301,7 +320,7 @@
    "outputs": [],
    "source": [
     "print model_estimations[0][0].keys()\n",
-    "print model_estimations[0][0]['pt1_smooth_1'].keys()"
+    "print model_estimations[0][0]['pt2_smooth_2'].keys()"
    ]
   },
   {
@@ -405,8 +424,26 @@
     "            steady_state_2.append(tdytdts_2[i][5])\n",
     "            zeta.append(tdytdts_2[i][6])\n",
     "    except:\n",
-    "        pass\n",
+    "        print \"Exception in function pt2 -> ignored\"\n",
+    "        #print tdytdts_2[-1]\n",
+    "        #print\n",
     "    return steady_state_2, time_constant_2, delay_2, zeta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_list_for_assert(pos, key1, key2):\n",
+    "    res = []\n",
+    "    for j, exp in enumerate(model_estimations[pos]):\n",
+    "        if key1 in model_estimations[pos][j]:\n",
+    "            res.append(model_estimations[pos][j][key1][key2])\n",
+    "    return res\n",
+    "\n",
+    "print get_list_for_assert(0, 'pt2', 'steady_state')"
    ]
   },
   {
@@ -436,10 +473,22 @@
     "    try:\n",
     "        #xin_array, yout_array, t_array = ident_tools.strip_multiply(df_ist_soll[i])\n",
     "        xin_array, yout_array, t_array, m_factor = ident_tools.unit_response(df_ist_soll[i])\n",
+    "        \n",
+    "        \n",
     "        steady_state_2, time_constant_2, delay_2, zeta = pt2(yout_array, t_array)\n",
+    "        \n",
+    "        assert(np.allclose(get_list_for_assert(i, 'pt2_smooth_2', 'steady_state'),\n",
+    "                           steady_state_2))\n",
+    "        assert(np.allclose(get_list_for_assert(i, 'pt2_smooth_2', 'time_constant'),\n",
+    "                           time_constant_2))\n",
+    "        assert(np.allclose(get_list_for_assert(i, 'pt2_smooth_2', 'delay'),\n",
+    "                           delay_2))\n",
+    "        assert(np.allclose(get_list_for_assert(i, 'pt2_smooth_2', 'zeta'),\n",
+    "                           zeta))        \n",
+    "        \n",
     "        ideal_tf_pt2, ideal_model_output_pt2, ideal_model_time_pt2, tf_without_delay_pt2, avg_delay_pt2 = ident_tools.ideal_pt2(steady_state_2, time_constant_2, delay_2, zeta)\n",
-    "    except:\n",
-    "        continue\n",
+    "    except Exception, e:\n",
+    "        print \"Exception: {}\".format(str(e))\n",
     "    yout_full_pt2.append(yout_array)\n",
     "    model_pos_pt2.append(ideal_model_output_pt2)\n",
     "    mean_matrix_pt2.append(stats.mean(ideal_model_output_pt2))\n",
